shuffle button init

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
 {{add-players savePlayers="savePlayers"}}
+{{shuffle-button shufflePlayers="shufflePlayers"}}
 {{clear-players clearPlayers="clearPlayers"}}
 {{groups-column rawGroups=model tour=0}}
