--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,3 +2,5 @@
 {{shuffle-button shufflePlayers="shufflePlayers"}}
 {{clear-players clearPlayers="clearPlayers"}}
 {{groups-column rawGroups=model tour=0}}
+{{groups-column rawGroups=model tour=1}}
+{{groups-column rawGroups=model tour=2}}
