--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,13 @@
 {{add-players savePlayers="savePlayers"}}
 {{shuffle-button shufflePlayers="shufflePlayers"}}
 {{clear-players clearPlayers="clearPlayers"}}
-{{groups-column rawGroups=model tour=0}}
-{{groups-column rawGroups=model tour=1}}
-{{groups-column rawGroups=model tour=2}}
+
+<div class="groups-container">
+    {{groups-column rawGroups=model tour=0}}
+    {{groups-column rawGroups=model tour=1}}
+    {{groups-column rawGroups=model tour=2}}
+    {{groups-column rawGroups=model tour=3}}
+    {{groups-column rawGroups=model tour=4}}
+    {{groups-column rawGroups=model tour=5}}
+    {{groups-column rawGroups=model tour=6}}
+</div>
