disable add players button after game start

--- a/app/templates/components/add-players.hbs
+++ b/app/templates/components/add-players.hbs
@@ -1,4 +1,4 @@
-{{#bs-button type="primary" icon="glyphicon glyphicon-plus" action="openInput"}}
+{{#bs-button type="primary" icon="glyphicon glyphicon-plus" action="openInput" disabled=gameStarted}}
     Добавить игроков
 {{/bs-button}}
 
