--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{add-players savePlayers="savePlayers"}}
+{{add-players savePlayers="savePlayers" groups=model}}
 {{shuffle-button shufflePlayers="shufflePlayers"}}
 {{clear-players clearPlayers="clearPlayers"}}
 
