--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,10 +4,10 @@
 
 <div class="groups-container">
     {{groups-column rawGroups=model tour=0}}
-    {{groups-column rawGroups=model tour=1}}
-    {{groups-column rawGroups=model tour=2}}
-    {{groups-column rawGroups=model tour=3}}
-    {{groups-column rawGroups=model tour=4}}
-    {{groups-column rawGroups=model tour=5}}
-    {{groups-column rawGroups=model tour=6}}
+    {{groups-column rawGroups=model tour=1 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model tour=2 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model tour=3 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model tour=4 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model tour=5 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model tour=6 updateGroup="updateGroup"}}
 </div>
