--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,13 +1,14 @@
-{{add-players savePlayers="savePlayers" groups=model}}
-{{shuffle-button shufflePlayers="shufflePlayers"}}
+{{add-players savePlayers="savePlayers" gameStarted=gameStarted}}
 {{clear-players clearPlayers="clearPlayers"}}
+{{options-panel model=model.options gameStarted=gameStarted}}
+{{shuffle-button shufflePlayers="shufflePlayers"}}
 
 <div class="groups-container">
-    {{groups-column rawGroups=model tour=0}}
-    {{groups-column rawGroups=model tour=1 updateGroup="updateGroup"}}
-    {{groups-column rawGroups=model tour=2 updateGroup="updateGroup"}}
-    {{groups-column rawGroups=model tour=3 updateGroup="updateGroup"}}
-    {{groups-column rawGroups=model tour=4 updateGroup="updateGroup"}}
-    {{groups-column rawGroups=model tour=5 updateGroup="updateGroup"}}
-    {{groups-column rawGroups=model tour=6 updateGroup="updateGroup"}}
+    {{groups-column rawGroups=model.groups tour=0}}
+    {{groups-column rawGroups=model.groups tour=1}}
+    {{groups-column rawGroups=model.groups tour=2}}
+    {{groups-column rawGroups=model.groups tour=3}}
+    {{groups-column rawGroups=model.groups tour=4}}
+    {{groups-column rawGroups=model.groups tour=5}}
+    {{groups-column rawGroups=model.groups tour=6}}
 </div>
