--- a/app/templates/components/groups-column.hbs
+++ b/app/templates/components/groups-column.hbs
@@ -15,7 +15,7 @@
               </div>
           {{/if}}
           <div class="panel-body">
-            {{#each group.players as |player|}}
+            {{#each group.sortedPlayers as |player|}}
               {{player.name}} ({{player.town}})
                 <br>
             {{/each}}
