--- a/app/templates/components/shuffle-button.hbs
+++ b/app/templates/components/shuffle-button.hbs
@@ -1,3 +1,3 @@
 {{#bs-button type="success" icon="glyphicon glyphicon-random" action="shufflePlayers"}}
-    Перемешать!
+    Перемешать
 {{/bs-button}}
