--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{add-players savePlayers="savePlayers" gameStarted=gameStarted}}
+{{add-players savePlayers="savePlayers"}}
 {{options-panel model=model.options gameStarted=gameStarted}}
 {{shuffle-button shufflePlayers="shufflePlayers"}}
 {{clear-players clearPlayers="clearPlayers"}}
