--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,6 +3,7 @@
   {{options-panel model=model.options gameStarted=gameStarted}}
   {{shuffle-button shufflePlayers="shufflePlayers"}}
   {{clear-players clearPlayers="clearPlayers"}}
+  {{save-data}}
 </div>
 
 <div class="groups-container">
