print players data refactoring

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,7 @@
 <div class="controls-container">
     {{add-players savePlayers="savePlayers"}}
     {{shuffle-button shufflePlayers="shufflePlayers"}}
+    {{print-players}}
     <div class="button-spacer"></div>
     {{options-panel model=model.options gameStarted=gameStarted}}
     {{clear-players clearPlayers="clearPlayers"}}
