--- a/app/templates/components/load-data.hbs
+++ b/app/templates/components/load-data.hbs
@@ -1,4 +1,4 @@
-{{input type="file" class="inline" id="load-data-input"}}
+{{input type="file" class="inline" id="load-data-input" accept=".json"}}
 {{#bs-button type="default" icon="glyphicon glyphicon-open" action="loadData"}}
     Открыть
 {{/bs-button}}
